Fix main class references and NullPointerException - Complete 51/51 modules